PR c++/80287 C++ crash with __attribute((may_alias))

gcc/
2017-08-24  Yvan Roux  <yvan.roux@linaro.org>

	Backport from mainline
	2017-04-17  Bernd Edlinger  <bernd.edlinger@hotmail.de>

	PR c++/80287
	* class.c (fixup_may_alias): Fix all type variants.

gcc/testsuite
2017-08-24  Yvan Roux  <yvan.roux@linaro.org>

	Backport from mainline
	2017-08-22  Yvan Roux  <yvan.roux@linaro.org>

	PR c++/80287
	* g++.dg/pr8028.C: New test.

From-SVN: r251331